<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Smima</string>
    <string name="app_logo">App Logo</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    
    <!-- Auth Screen -->
    <string name="login">Log In</string>
    <string name="signup">Sign Up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone">Phone (Optional)</string>
    <string name="country">Country</string>
    <string name="terms_of_service">I agree to the Terms of Service</string>
    <string name="continue_text">Continue</string>

    <!-- Main Screen -->
    <string name="scan_barcode">Scan Barcode</string>
    <string name="manual_input">Manual Input</string>
    <string name="water_temperature">Water Temperature</string>
    <string name="mixture_volume">Mixture Volume</string>
    <string name="preparation_time">Preparation Time</string>
    <string name="start_preparation">Start Preparation</string>

    <!-- Add Device Screen -->
    <string name="select_wifi">Select Wi-Fi Network</string>
    <string name="connecting">Connecting to Device</string>
    <string name="device_name">Device Name</string>
    <string name="set_default">Set as Default Device</string>
    <string name="confirm">Confirm</string>

    <!-- Device Status -->
    <string name="device_status">Device Status</string>
    <string name="water_level">Water Level</string>
    <string name="milk_powder">Milk Powder</string>
    <string name="wifi_signal">Wi-Fi Signal</string>
    <string name="child_lock">Child Lock</string>
    <string name="bottle_present">Bottle Present</string>
    <string name="scale_buildup">Scale Buildup</string>
    <string name="run_diagnostics">Run Self-Diagnostics</string>
    <string name="status_ok">OK</string>
    <string name="status_connected">Connected</string>
    <string name="status_yes">Yes</string>
    <string name="status_no">No</string>

    <!-- Health Log Screen -->
    <string name="child_name">Child\'s Name</string>
    <string name="birth_date">Birth Date</string>
    <string name="feeding_time">Feeding Time</string>
    <string name="feeding_volume">Volume</string>
    <string name="weight">Weight</string>
    <string name="body_temperature">Body Temperature</string>
    <string name="stool_status">Stool Status</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_preparation">Preparation</string>
    <string name="menu_health">Health</string>
    <string name="menu_devices">Devices</string>
</resources>